# ctxgraph-code

./: .gitignore  README.md  pyproject.toml
.claude/commands/: ctxgraph-code.md
.ctxgraph/: config.toml  graph.db
src/ctxgraph_code/: __main__.py  cli.py  render.py
src/ctxgraph_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ctxgraph_code/analyzers/python/: importer.py  semantic.py  symbols.py
src/ctxgraph_code/analyzers/treesitter/: __init__.py  analyzer.py  languages.py
src/ctxgraph_code/config/: build_status.py  global_paths.py  hooks.py  init.py  settings.py
src/ctxgraph_code/exclude/: patterns.py
src/ctxgraph_code/graph/: builder.py  models.py  query.py  storage.py
src/ctxgraph_code/render/: __init__.py  _text.py  mermaid.py
src/ctxgraph_code/view/: visualizer.py
